--- a/main/addequipment/localisation/addequipment_l_english.yml
+++ b/main/addequipment/localisation/addequipment_l_english.yml
@@ -825,18 +825,26 @@
 
   addeq.event.air.jet.877206.t:0 "添加喷气式战术轰炸机"
   addeq.event.air.jet.877206.d:0 "添加喷气式战术轰炸机\n请选择类型"
-
+  
+  #I型
   addeq.event.air.jet.877201.t:0 "添加I型喷气式战术轰炸机"
   addeq.event.air.jet.877201.d:0 "添加I型喷气式战术轰炸机\n请选择添加的数量"
   
+  #II型
   addeq.event.air.jet.877202.t:0 "添加II型喷气式战术轰炸机"
   addeq.event.air.jet.877202.d:0 "添加II型喷气式战术轰炸机\n请选择添加的数量"
 
-  #I型
   
-  #II型
-
   #####喷气式战略轰炸机#####
+  
+  addeq.event.air.jet.877306.a:0 "添加I型喷气式战略轰炸机"
+
+  addeq.event.air.jet.877306.t:0 "添加喷气式战略轰炸机"
+  addeq.event.air.jet.877306.d:0 "添加喷气式战略轰炸机\n请选择类型"
+
+  #I型
+  addeq.event.air.jet.877301.t:0 "添加I型喷气式战略轰炸机"
+  addeq.event.air.jet.877301.d:0 "添加I型喷气式战略轰炸机\n请选择添加的数量"
 
   #####自杀式飞机#####
  
