完成喷气式所有飞机添加功能实现

--- a/main/addequipment/localisation/addequipment_l_english.yml
+++ b/main/addequipment/localisation/addequipment_l_english.yml
@@ -846,5 +846,9 @@
   addeq.event.air.jet.877301.t:0 "添加I型喷气式战略轰炸机"
   addeq.event.air.jet.877301.d:0 "添加I型喷气式战略轰炸机\n请选择添加的数量"
 
-  #####自杀式飞机#####
- 
+  #####自杀式飞行器#####
+  
+  addeq.event.air.jet.877401.t:0 "添加自杀式飞行器"
+  addeq.event.air.jet.877401.d:0 "添加自杀式飞行器\n请选择添加的数量"
+
+
