实现添加基础小型机功能

--- a/main/addequipment/localisation/addequipment_l_english.yml
+++ b/main/addequipment/localisation/addequipment_l_english.yml
@@ -198,6 +198,7 @@
   #------------------1.12版机身-----------------#
   # 小型机
   addeq_air_small_iw:0 "添加战间小型机身"
+  addeq_air_small_basic:0 "添加基础小型机身"
 
   # 舰载机
 
