--- a/main/addequipment/localisation/addequipment_l_english.yml
+++ b/main/addequipment/localisation/addequipment_l_english.yml
@@ -199,6 +199,7 @@
   # 小型机
   addeq_air_small_iw:0 "添加战间小型机身"
   addeq_air_small_basic:0 "添加基础小型机身"
+  addeq_air_small_improved:0 "添加改进小型机身"
 
   # 舰载机
 
